# DaThinker

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.py
src/: __init__.py
src/adaptive/: __init__.py  context.py  core.py  detector.py
src/dathinker/: __init__.py  cli.py  config.py  openrouter.py  orchestrator.py  router.py  security.py
src/dathinker/agents/: __init__.py  base.py  clarifier.py  devils_advocate.py  perspective.py  socratic.py  synthesizer.py
tests/: __init__.py  test_adaptive_scenarios.py  test_agent_constraints.py  test_harness.py  test_output.txt  test_results.json  test_routing.py  test_session_controls.py  test_thinking_user.py  test_thinking_user_v2.py  thinking_user_results.json  thinking_user_v2_results.json
tests/scenarios/: __init__.py  scenario_1_manipulation.py  scenario_2_edge_cases.py  scenario_3_perfect_conversation.py  scenario_4_injections.py  scenario_5_illogical.py
